--- a/style_tabel.css
+++ b/style_tabel.css
@@ -1,15 +1,26 @@
+body{
+	background-color: black;
+}
 table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
+    color :black;
 }
 
 td, th {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
+    color: white;
+ 
 }
+h1{color: black;
+	text-align: center;
+ 
+}
+tr:hover {background-color: red;}
 
-tr:nth-child(even) {
+/*tr:nth-child(even) {
     background-color: #dddddd;
 }
