--- a/style_login.css
+++ b/style_login.css
@@ -10,25 +10,29 @@ body{
 	background: #1da1f2;
 	width: 350px;
 	margin: 222px auto 0;
-	border-radius: 16px;
+	border-radius: 15px 50px 30px;
 	height: 256px;
 	overflow: hidden;
 }
 .kepala{
 	background: #4d62ff;
-	padding: 10px ;
+	padding: 20px ;
 	height: 60px;
+	float: right;
 }
 .judul{
     color: #fff;
     font-weight: normal;
-    line-height: 40px;
+    line-height: 30px;
     display: inline-block;
     text-align: center;
+    color: white;
+    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
 }
+
 .paraf{
 	color: :#fff;
-	font-size:10px;
+	font-size:11px;
 }
 .lock{
 	background-image: url("lock.png");
